applications/frigate/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: frigate
      app.kubernetes.io/instance: frigate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frigate
        app.kubernetes.io/instance: frigate
    spec:
      containers:
        - name: frigate
          image: "ghcr.io/blakeblackshear/frigate:0.12.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
            - name: rtmp
              containerPort: 1935
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /dev/bus/usb
              name: coral-dev
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
            - name: dshm
              mountPath: /dev/shm
          resources:
      volumes:
        - name: config
          configMap:
            name: frigate
        - name: coral-dev
          hostPath:
            path: /dev/bus/usb
        - name: data
          hostPath:
            path: /mnt/cameras
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: usb-attachment
                operator: In
                values:
                - coral-tpu
