applications/frigate/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
    - name: rtmp
      port: 1935
      protocol: TCP
      targetPort: rtmp
  selector:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate
